--- a/AOC2022-hs.cabal
+++ b/AOC2022-hs.cabal
@@ -36,3 +36,7 @@ executable day1
 executable day2
     import:           common-options
     main-is:          Day2.hs
+
+executable day3
+    import:           common-options
+    main-is:          Day3.hs
