--- a/AOC2022-hs.cabal
+++ b/AOC2022-hs.cabal
@@ -40,3 +40,7 @@ executable day2
 executable day3
     import:           common-options
     main-is:          Day3.hs
+
+executable day4
+    import:           common-options
+    main-is:          Day4.hs
