--- a/AOC2022-hs.cabal
+++ b/AOC2022-hs.cabal
@@ -23,7 +23,8 @@ maintainer:         me@rdvdev2.com
 
 common common-options
     build-depends:    base ^>=4.18.0.0,
-                      split ^>=0.2.0.0
+                      split ^>=0.2.0.0,
+                      mtl ^>=2.3.1
     hs-source-dirs:   app
     default-language: Haskell2010
     ghc-options:      -Wall
@@ -60,3 +61,7 @@ executable day7
 executable day8
     import:           common-options
     main-is:          Day8.hs
+
+executable day9
+    import:           common-options
+    main-is:          Day9.hs
